--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 .App {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   height: 100dvh;
   flex-direction: row;
 }
